Bootstrap conversion regression fixes
- Clean up display of many competitions on /my
- Fix whitespace between competition tiles on same
- Fix display of images within html page sections of a competition

--- a/codalab/apps/web/static/less/competitions.less
+++ b/codalab/apps/web/static/less/competitions.less
@@ -51,6 +51,14 @@
                 font-weight:200;
             }
         }
+        .tab-pane .tab-inner {
+            img {
+                .img-responsive;
+            }
+            center {
+                .text-center;
+            }
+        }
     }
     .phase-list {
         .phase-list-item:last-child {
